--- a/privacy-engineer.html
+++ b/privacy-engineer.html
@@ -84,7 +84,7 @@ application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<h5><a href='http://formstack.applytojob.com/apply/okWvPyTidz/Privacy-Analyst'>Privacy Analyst - Formstack - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://formstack.applytojob.com/apply/okWvPyTidz/Privacy-Analyst'>Privacy Analyst - Formstack - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -92,7 +92,7 @@ application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Sep 29, 2019 ... Apply to Privacy and Compliance Analyst at Formstack in (Multiple states).</p>
 <hr/>
-<h5><a href='https://jobs.jobware.net/Job/Senior-Data-Privacy-Software-Engineer-m-f-d.354201865.html?jw_chl_seg=YOURJOBINGERMANY&skin=zaehlpixel_only'>Senior Data-Privacy Software Engineer (m/f/d) | Advantest | Job</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobware.net/Job/Senior-Data-Privacy-Software-Engineer-m-f-d.354201865.html?jw_chl_seg=YOURJOBINGERMANY&skin=zaehlpixel_only'>Senior Data-Privacy Software Engineer (m/f/d) | Advantest | Job</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
@@ -154,7 +154,7 @@ experience?...</p>
 <p><span class="badge badge-light">Melbourne Australia</span></p>
 <p>Posted on: 2019-09-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frb.referrals.selectminds.com/jobs/oeb-data-privacy-paralegal-associate-new-jersey-location-4567'>OEB - Data Privacy Paralegal Associate (New Jersey location) - The Federal Reserve System Careers</a></h5> 
+<h5><a href='https://frb.referrals.selectminds.com/jobs/oeb-data-privacy-paralegal-associate-new-jersey-location-4567'>OEB - Data Privacy Paralegal Associate (New Jersey location) - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light">Newark, NJ</span></p>
 <p>Posted on: 2019-09-22</p>
 <hr/>
@@ -182,7 +182,7 @@ experience?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://validity.applytojob.com/apply/VGJCn12zXy/Privacy-Specialist'>Privacy Specialist - Validity - Career Page</a></h5> 
+<h5><a href='https://validity.applytojob.com/apply/VGJCn12zXy/Privacy-Specialist'>Privacy Specialist - Validity - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Sep 2, 2019 ... About the Company. Validity is a leading provider of data integrity and 
 compliance solutions that tens of thousands of organizations worldwide rely on to 
@@ -206,7 +206,7 @@ trust?...</p>
 <p><span class="badge badge-light">Toronto Vancouver Canada Berlin</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/mozilla/jobs/1810105'>Job Application for Trust & Privacy Analyst at Mozilla</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mozilla/jobs/1810105'>Job Application for Trust & Privacy Analyst at Mozilla</a></h5> 
 <p><span class="badge badge-light">San Francisco Mountain View</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
@@ -238,7 +238,7 @@ privacy?...</p>
 Privacy Office based in Cork, Ireland. You would work directly with the European
 ?...</p>
 <hr/>
-<h5><a href='https://landolakes.wd1.myworkdayjobs.com/en-US/LandOLakes/job/Arden-Hills-MN-USA/Data-Privacy-Compliance-Specialist_R-8434'>Data Privacy Compliance Specialist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://landolakes.wd1.myworkdayjobs.com/en-US/LandOLakes/job/Arden-Hills-MN-USA/Data-Privacy-Compliance-Specialist_R-8434'>Data Privacy Compliance Specialist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 14, 2019 ... programs and services. The Data Privacy/Compliance Specialist will be 
 responsible for facilitating the development and implementation of a data privacy 
@@ -278,7 +278,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light">Washington, District of Columbia</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/126B354682'>TechOp Solutions International - Jobs: Privacy Analyst - Apply online</a></h5> 
+<h5><a href='https://www.workable.com/j/126B354682'>TechOp Solutions International - Jobs: Privacy Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Privacy Analyst at TechOp Solutions International.</p>
 <hr/>
@@ -306,7 +306,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>Jun 19, 2019 ... Apply online for the job of Privacy Analyst at TechOp Solutions International.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/1901group/job/otyqafwl'>1901 Group Careers - Security &amp; Privacy Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/1901group/job/otyqafwl'>1901 Group Careers - Security &amp; Privacy Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-01</p>
 <hr/>
@@ -314,7 +314,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://vodafone.referrals.selectminds.com/jobs/privacy-operations-specialist-57814'>Privacy Operations Specialist - Vodafone Careers</a></h5> 
+<h5><a href='https://vodafone.referrals.selectminds.com/jobs/privacy-operations-specialist-57814'>Privacy Operations Specialist - Vodafone Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-26</p>
 <hr/>
@@ -338,7 +338,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-11</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/boxinc/jobs/1719749'>Job Application for Sr. Privacy Compliance Analyst at Box</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/boxinc/jobs/1719749'>Job Application for Sr. Privacy Compliance Analyst at Box</a></h5> 
 <p><span class="badge badge-light">Redwood City</span></p>
 <p>Posted on: 2019-06-04</p>
 <hr/>
@@ -409,7 +409,7 @@ affect?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/etsy/b2605ca0-523f-47e9-a66f-f6b8a3d0d342'>Etsy - Senior Privacy Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/etsy/b2605ca0-523f-47e9-a66f-f6b8a3d0d342'>Etsy - Senior Privacy Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
@@ -429,7 +429,7 @@ affect?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/magicleapinc/jobs/1599092'>Job Application for Privacy Features Analyst at Magic Leap, Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/magicleapinc/jobs/1599092'>Job Application for Privacy Features Analyst at Magic Leap, Inc.</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
@@ -437,15 +437,15 @@ affect?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mixpanel.com/legal/privacy-policy/'>Privacy Policy | Mobile &amp; Web User Analytics | Mixpanel</a></h5> 
+<h5><a href='https://mixpanel.com/legal/privacy-policy/'>Privacy Policy | Mobile &amp; Web User Analytics | Mixpanel</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/endurance/jobs/1621589'>Job Application for Privacy Specialist at Endurance International Group</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/endurance/jobs/1621589'>Job Application for Privacy Specialist at Endurance International Group</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/ringcentral/job/o6FU9fwy'>RingCentral Careers - Privacy Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/ringcentral/job/o6FU9fwy'>RingCentral Careers - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Apr 18, 2019 ... Description. The Company. RingCentral, Inc. (NYSE:RNG) is a leading provider 
 of global enterprise cloud communications and collaboration solutions.</p>
