--- a/ux.html
+++ b/ux.html
@@ -41,6 +41,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/greenparksports/jobs/4440274002'>Job Application for UI/UX Designer at GreenPark Sports</a></h5> 
+<p><span class="badge badge-light">Los Angeles</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oNwbbfwp&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=npvhqMwS'>ServiceNow Careers - Lead UX Researcher</a></h5> 
 <p><span class="badge badge-light">Hyderabad, India</span></p>
 <p>Posted on:: 2019-10-31</p>
@@ -91,7 +95,7 @@
 <p><span class="badge badge-light">Burnaby Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://producthire.net/job/ux-designer-11/'>UX Designer | PRODUCTHIRE.NET</a></h5> 
+<h5><a href='https://producthire.net/job/ux-designer-11/'>UX Designer | PRODUCTHIRE.NET</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -119,7 +123,7 @@
 <p><span class="badge badge-light">Amsterdam, Netherlands  Amsterdam</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/25484-Senior-UI-UX-Designer?source=twitter'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/25484-Senior-UI-UX-Designer?source=twitter'>
       Senior UI/UX Designer at Insiten - Atlanta, GA - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">Atlanta, GA</span></p>
@@ -145,7 +149,7 @@
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/derivesystems/job/ocdl9fwD'>Derive Systems Careers - Sr. User Experience (UX) Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/derivesystems/job/ocdl9fwD'>Derive Systems Careers - Sr. User Experience (UX) Designer</a></h5> 
 <p><span class="badge badge-light">Broomfield, Colorado</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -155,7 +159,7 @@
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oRzU9fwd&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nIOopMwA'>Guidewire Software, Inc. Careers - UX Architect - San Mateo, CA</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oRzU9fwd&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nIOopMwA'>Guidewire Software, Inc. Careers - UX Architect - San Mateo, CA</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -171,7 +175,7 @@
 <p><span class="badge badge-light">Santa Clara, California  San Diego, California  San Francisco, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://helloprint.recruitee.com/l/en/o/uiux-designer-internship-rotterdam'>
+<h5><a href='https://helloprint.recruitee.com/l/en/o/uiux-designer-internship-rotterdam'>
       UI/UX Designer Internship - Helloprint
     </a></h5> 
 <p><span class="badge badge-light">Rotterdam</span></p>
@@ -217,11 +221,11 @@
 <p><span class="badge badge-light">Pittsburgh</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CPPInvestmentBoard/743999698522300-senior-ui-ux-engineer-data-engineering-5-month-contract-'>CPP Investment Board Senior UI/UX Engineer, Data Engineering  (5-month Contract) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CPPInvestmentBoard/743999698522300-senior-ui-ux-engineer-data-engineering-5-month-contract-'>CPP Investment Board Senior UI/UX Engineer, Data Engineering  (5-month Contract) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Toronto, Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/soroco/jobs/1939115'>Job Application for UI UX Designer at Soroco</a></h5> 
+<h5><a href='https://boards.greenhouse.io/soroco/jobs/1939115'>Job Application for UI UX Designer at Soroco</a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -267,7 +271,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ashcompanies/job/oBT2afwq'>American Specialty Health, Inc. Careers - UX Designer II</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ashcompanies/job/oBT2afwq'>American Specialty Health, Inc. Careers - UX Designer II</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -279,11 +283,11 @@
 <p><span class="badge badge-light">Kerala, India  North America</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698471068-ux-designer-contract-'>McFadyen Digital UX Designer (Contract) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698471068-ux-designer-contract-'>McFadyen Digital UX Designer (Contract) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Brazil  North America</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/sugarcrm/job/oXAqbfwS'>SugarCRM Careers - Senior UX Designer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/sugarcrm/job/oXAqbfwS'>SugarCRM Careers - Senior UX Designer</a></h5> 
 <p><span class="badge badge-light">Cupertino California  North Carolina  Atlanta, Georgia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -331,7 +335,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/gitlab/jobs/4495951002'>Job Application for UX Manager, Dev at GitLab</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/gitlab/jobs/4495951002'>Job Application for UX Manager, Dev at GitLab</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -343,7 +347,7 @@
 <p><span class="badge badge-light">North Billerica, Massachusetts  Brooklyn, NY</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=o9HIafws&__jvst=Employee+Referral&__jvsd=shUBLhwj&__jvsc=Twitter&bid=nUR6nMwv'>Jobvite, Inc. Careers - Senior UX Designer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=o9HIafws&__jvst=Employee+Referral&__jvsd=shUBLhwj&__jvsc=Twitter&bid=nUR6nMwv'>Jobvite, Inc. Careers - Senior UX Designer</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -464,10 +468,6 @@
 <h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698363335-ux-ui-designer'>lm group UX/UI Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Chiasso, Switzerland</span></p>
 <p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.travelweekly.co.uk/job/172594/luxury-travel-consultant/?TrackID=174884'>LUXURY TRAVEL CONSULTANT job with C&amp;M Travel Recruitment Ltd | 172594</a></h5> 
-<p><span class="badge badge-light">London London</span></p>
-<p>Posted on:: 2019-10-29</p>
 <hr/>
 
 
